[package]
name = "rust-rule-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_rule_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"

[package.metadata.scripts]
build-python = "maturin build && pip install ."
test-python = "for file in ./tests/*.py; do python \"$file\"; done"
# test-python = "python ./tests/__init__.py"

