[package]
name = "rust-rule-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_rule_engine"
crate-type = ["cdylib"]

[build-dependencies]
cfgrammar = "0.13.3"
lrlex = "0.13.3"
lrpar = "0.13.3"

[dependencies]
pyo3 = "0.19.0"
cfgrammar = "0.13.3"
lrlex = "0.13.3"
lrpar = "0.13.3"

[package.metadata.scripts]
build-python = "maturin build && pip install ."
test-python = "for file in ./tests/*.py; do python \"$file\"; done"

