[package]
name = "rust-rule-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_rule_engine"
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true

[package.metadata.maturin]
python-source = "python"

[build-dependencies]
cfgrammar = "0.13.3"
lrlex = "0.13.3"
lrpar = "0.13.3"

[dependencies]
pyo3 = "0.19.0"
cfgrammar = "0.13.3"
lrlex = "0.13.3"
lrpar = "0.13.3"
unic-langid = "0.9.4"
